# Dlib4Android

./: .gitattributes  .gitignore  README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xiongda/dlib4android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/dlib/: CMakeLists.txt
app/src/main/java/com/xiongda/dlib4android/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xiongda/dlib4android/: ExampleUnitTest.java
dlib/: CMakeLists.txt  build.gradle  proguard-rules.pro
dlib/src/androidTest/java/com/xiongda/dlib/: ExampleInstrumentedTest.java
dlib/src/main/: AndroidManifest.xml
dlib/src/main/res/values/: strings.xml
dlib/src/test/java/com/xiongda/dlib/: ExampleUnitTest.java
